# CIMR-RGB

./: .envrc  .gitignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  T_19_BG.xml  ]  config-maks.xml  config.xml  flake.nix  grasp_config.xml  pyproject.toml  setup.py  slurm.txt  test.py  testfj.xml
CEMPAL/: CEMPAL_RGB_wrapper.py
configs/: grasp_config.xml  rgb_cimr_config.xml  rgb_config.xml
dpr/: config.xml
dpr/L1C/CIMR/: CIMR_RGB_L1c_product_format.txt
nix/: pyresample.nix  shell.nix
notebooks/: JB3 Algorithm Tuning for the Basic Algorithms.ipynb  Logging.ipynb  README.md  Untitled.ipynb  geoboundary.ipynb
notebooks/Antenna_pattern_notes/: Antenna_Pattern_to_Earth_Notes.ipynb  Antenna_Pattern_to_Earth_Notes_Davide.ipynb  CIMR_Antenna_Patterns_Format.ipynb
notebooks/JB1 - Antenna_pattern_notes/: Antenna_Pattern_to_Earth_Notes.ipynb  CIMR_Antenna_Patterns_Format.ipynb  JB1_projecting_antenna_patterns_to_earth.ipynb
notebooks/JB2 - CIMR RSIR L1C/: JB2.xml  JB2_RISR_CIMR_L1C.ipynb
notebooks/JB3 - Tuning parameters for the basic algorithms/: JB3 Algorithm Tuning for the Basic Algorithms.ipynb  JB3.xml
notebooks/JB4 - L1b_L1r_L1c/: L1b2L1r2L1c.ipynb  l1bl1rl1c_config.xml
notebooks/L1b_L1r_L1c/: L1b2L1r2L1c.ipynb
notebooks/Optimisations/: Chunking.ipynb
notebooks/map_projections/: projections.ipynb
notebooks/optimisations/: chunking.ipynb
src/: ap_processing.py  bg.py  bg_interpolation.py  bg_l1r.py  config_file.py  data_ingestion.py  dib.py  grid_generator.py  ids.py  iterative_methods.py  main.py  main_maksym_grid_test.py  maksym.py  nn.py  process_antenna_pattern.py  product_generator.py  product_generator.py~  regridder.py  regridder_v2.py  rgb_logging.py  rsir.py  rsir_interpolation.py  utils.py
src/cimr-grasp/: Chunking.ipynb  cimr-grasp-chunk.py  cimr-grasp-chunk.py~  cimr-grasp.py  grasp_io.py  grasp_lib.py  grasp_utils.py  test_xarray.py
src/cimr_grasp/: README.md  __init__.py  __main__.py  cimr-grasp-chunk.py  cimr-grasp.py  grasp_io.py  grasp_utils.py  logger_config.json  rgb_logging.py
src/cimr_grasp/obsolete/: Chunking.ipynb  cython_test.ipynb  obsolete.py
src/cimr_grasp/test/: logging_config.py  main.py  module1.py
src/cimr_rgb/: __init__.py  __main__.py  ap_processing.py  bg.py  config_file.py  data_ingestion.py  dib.py  grid_generator.py  ids.py  iterative_methods.py  logger_config.json  nn.py  product_generator.py  regridder.py  rgb_logging.py  rsir.py  utils.py
src/cimr_rgb/configs/: cimr_rgb_logger_config.json
tests/: AMSR2_L1r_comparison.py  CIMR_results.py  SMAP_L1c_comparison.py  conftest.py  inspect_SMAP_l1c.py
tests/MS3/: T.12.py  T.15.py
tests/MS3_verification_tests/T_12/: SMAP_L1C_IDS_36km_2024-12-06_16-15-26.nc  T.12.py  T_12.xml  T_12_IDS.xml
tests/MS3_verification_tests/T_13/: CIMR_L1C_IDS_9km_2024-12-06_16-44-22.nc  CIMR_L1C_NN_9km_2024-12-06_16-44-16.nc  T.13.py  T_13.xml  T_13_IDS.xml  T_13_NN.xml
tests/MS3_verification_tests/T_14/: T.14.py  T_14.py  T_14.xml  T_14_DIB.xml  T_14_IDS.xml
tests/Performance_Assesment/: convert_central_america_to_ease.py  convert_sceps_3_to_ease.py  convert_test_scenes_to_ease.py  footprint_geometry.py  main_performance.py  metrics.py  performance_assessment_base.xml  performance_assessment_pipeline.py  quick_config.xml  quick_regrid.py  spot_discontinuity_inspection.py
tests/other/: AMSR2_L1r_comparison.py  SMAP_L1c_comparison.py  inspect_SMAP_l1c.py
tests/system/: README.md  cimr_ids.xml  shared_confs.py  smap_ids_g.xml  test.py  test_T.12.py  test_T.13.py  test_T.14.py  test_T.15.py  test_T.16.py  test_T.17.py  test_T.19.py  test_T.21.py  test_T.31.py  test_cimr_rgb.py  test_scenarios.json
tests/unit/: test_ap_processing.py  test_config_file.py  test_data_ingestion.py  test_grid_generator.py  test_iterative_methods.py  test_nn.py  test_regridder.py  test_rgb_logging.py  test_utils.py
(+149 files in other folders)
