[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "cimr-rgb"
version = "0.0.1"
description = "CIMR RGB"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Joseph Heywood",    email = "heywood@stcorp.no"},
  {name = "Maksym Brilenkov",  email = "brilenkov@stcorp.no"},
  {name = "Davide Decataldo ", email = "decataldo@stcorp.no"}
]
keywords = ["satellites", "microwave radiometry"] 
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    # Add any dependencies here if necessary
    "netCDF4", 
    "colorama", 
    "numpy >= 1.24.6", 
    "pyresample >= 1.28.2",
    "scipy >= 1.13.0", 
    "h5py >= 3.11.0", 
    #"netCDF >= 1.7.1.post2", 
    "pyproj >= 3.6.1", 
    "tqdm >= 4.66.4", 
    "psutil >= 5.9.8", 
    "cartopy >= 0.23.0",
    "pytest"
]


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
] 


[tool.setuptools]
packages = ["cimr_grasp", "cimr_rgb"]
package-dir = {"" = "src"}


[project.scripts]
cimr-grasp = "cimr_grasp.__main__:main" 
cimr-rgb   = "cimr_rgb.__main__:main" 

