[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "cimr-rgb"
version = "1.0.0rc1"
description = "CIMR RGB"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Joseph Heywood",    email = "heywood@stcorp.no"},
  {name = "Maksym Brilenkov",  email = "brilenkov@stcorp.no"},
  {name = "Davide Decataldo ", email = "decataldo@stcorp.no"}
]
keywords = ["satellites", "passive microwave radiometry"] 
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  # Add any dependencies here if necessary
  "netCDF4", 
  "colorama", 
  "numpy >= 1.24.6", 
  "pyresample >= 1.28.2",
  "scipy >= 1.13.0", 
  "h5py >= 3.11.0", 
  "pyproj >= 3.6.1", 
  "tqdm >= 4.66.4", 
  "psutil >= 5.9.8", 
  "cartopy >= 0.23.0",
  "shapely", 
  "matplotlib" 
]


[project.optional-dependencies]
tests = ["pytest"] 


[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
  "-v", 
  "-ra", 
] 
testpaths = ["tests"]


[tool.setuptools]
packages = ["cimr_grasp", "cimr_rgb"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
cimr_rgb = [
  "configs/cimr_rgb_logger_config.json", 
  "dpr/Grids/NSIDC_PS/NSIDC0771_CellArea_PS_N12.5km_v1.0.nc", 
  "dpr/Grids/NSIDC_PS/NSIDC0771_CellArea_PS_S12.5km_v1.0.nc",  
  "dpr/Grids/NSIDC_PS/NSIDC0771_CellArea_PS_N25km_v1.0.nc", 
  "dpr/Grids/NSIDC_PS/NSIDC0771_CellArea_PS_S25km_v1.0.nc",  
  "dpr/Grids/NSIDC_PS/NSIDC0771_CellArea_PS_N6.25km_v1.0.nc",  
  "dpr/Grids/NSIDC_PS/NSIDC0771_CellArea_PS_S6.25km_v1.0.nc" 
]


[project.scripts]
cimr-grasp = "cimr_grasp.__main__:main" 
cimr-rgb   = "cimr_rgb.__main__:main" 

